syntax = "proto3";

package ztcp.device.v1;

option go_package = "zero-trust-control-plane/backend/api/generated/device/v1;devicev1";

import "common/common.proto";
import "google/protobuf/timestamp.proto";

// Device represents a registered device for a user in an org.
message Device {
  string id = 1;
  string user_id = 2;
  string org_id = 3;
  string fingerprint = 4;
  bool trusted = 5;
  google.protobuf.Timestamp trusted_until = 6;
  google.protobuf.Timestamp revoked_at = 7;
  google.protobuf.Timestamp last_seen_at = 8;
  google.protobuf.Timestamp created_at = 9;
}

// RegisterDeviceRequest registers a new device.
message RegisterDeviceRequest {
  string user_id = 1;
  string org_id = 2;
  string fingerprint = 3;
}

// RegisterDeviceResponse returns the registered device.
message RegisterDeviceResponse {
  Device device = 1;
}

// GetDeviceRequest identifies the device by ID.
message GetDeviceRequest {
  string device_id = 1;
}

// GetDeviceResponse returns the device.
message GetDeviceResponse {
  Device device = 1;
}

// ListDevicesRequest lists devices (org- or user-scoped) with pagination.
message ListDevicesRequest {
  string org_id = 1;
  string user_id = 2;  // optional; filter by user
  ztcp.common.v1.Pagination pagination = 3;
}

// ListDevicesResponse returns a page of devices.
message ListDevicesResponse {
  repeated Device devices = 1;
  ztcp.common.v1.PaginationResult pagination = 2;
}

// RevokeDeviceRequest identifies the device to revoke (trust cleared, revoked_at set).
message RevokeDeviceRequest {
  string device_id = 1;
}

// RevokeDeviceResponse is empty on success.
message RevokeDeviceResponse {}

// DeviceService handles device trust and posture. Browser talks here directly.
service DeviceService {
  rpc RegisterDevice(RegisterDeviceRequest) returns (RegisterDeviceResponse);
  rpc GetDevice(GetDeviceRequest) returns (GetDeviceResponse);
  rpc ListDevices(ListDevicesRequest) returns (ListDevicesResponse);
  rpc RevokeDevice(RevokeDeviceRequest) returns (RevokeDeviceResponse);
}
